--- a/css/style.css
+++ b/css/style.css
@@ -312,76 +312,48 @@ body {
 /*    nav styles      */
 /**********************/
 nav {
-    background-color: #9bcbc2;
-    margin-bottom: 30px;
-    height: 60px;
-    min-width: 360px;
+    background-color: transparent;
+
+    padding-top: 17px;
+
 }
 
-.mobile-nav-bar a.phone-box {
-    float: left;
-    padding: 17px 20px;
-    color: #005248;
-
+nav, nav ul {
+    background: none;
     font-size: 16px;
-    line-height: 24px;
-    height: 24px;
-    text-decoration: none;
-    background: transparent;
-    cursor: pointer;
+    height: auto;
+    line-height: normal;
+    padding: 0;
 }
 
-.mobile-nav-bar a.phone-box .fa {
-    color: #005248;
-    font-size: 20px;
-    line-height: 20px;
-    height: 20px;
-    text-align: center;
-    margin: 2px 3px 0 0;
+nav ul li {
+    font-family: Josefin;
+    display: inline-block;
+    background: none;
     position: relative;
-    top: 1px;
 }
 
-.mobile-nav-bar a.menu-icon {
-    color: #ffffff;
-    background: #005248;
-    display: block;
-    text-align: right;
-    float: right;
-    padding: 0 20px 0 30px;
-    height: 60px;
-    width: auto;
-    text-transform: uppercase;
-    font-size: 19px;
-    line-height: 60px;
-    position: relative;
-    vertical-align: middle;
-    cursor: pointer;
-    margin: 0;
+nav .brand-logo {
+    width: 25%;
+    height: auto;
 }
 
-.mobile-nav-bar a.menu-icon .fa {
-    margin: 0 0 0 15px;
-}
+    nav .brand-logo img {
+        max-width: 100%;
+    }
 
 .side-nav {
     background: #005248;
 }
 
-.side-nav .side-nav-title {
-    text-align: center;
-}
-
-.side-nav .side-nav-title, .side-nav ul li a {
-    color: #ffffff;
-    font-size: 16px;
-}
-
-@media screen and (min-width: 601px) {
-    nav {
-        background-color: transparent;
+    .side-nav .side-nav-title {
+        text-align: center;
     }
-}
+
+    .side-nav .side-nav-title, .side-nav ul li a {
+        color: #ffffff;
+        font-size: 16px;
+    }
 
 
 /********************************/
@@ -392,7 +364,69 @@ header {
     background-size: auto;
 }
 
-@media screen and (min-width: 600px) {
+    header .mobile-header {
+        background-color: #9bcbc2;
+        margin-bottom: 30px;
+        height: 60px;
+        min-width: 360px;
+    }
+
+        header .mobile-header .mobile-nav-bar a.phone-box {
+            float: left;
+            padding: 17px 20px;
+            color: #005248;
+            font-size: 16px;
+            line-height: 24px;
+            height: 24px;
+            text-decoration: none;
+            background: transparent;
+            cursor: pointer;
+        }
+
+            header .mobile-header .mobile-nav-bar a.phone-box .fa {
+                color: #005248;
+                font-size: 20px;
+                line-height: 20px;
+                height: 20px;
+                text-align: center;
+                margin: 2px 3px 0 0;
+                position: relative;
+                top: 1px;
+            }
+
+        header .mobile-header .mobile-nav-bar a.menu-icon {
+            color: #ffffff;
+            background: #005248;
+            display: block;
+            text-align: right;
+            float: right;
+            padding: 0 20px 0 30px;
+            height: 60px;
+            width: auto;
+            text-transform: uppercase;
+            font-size: 19px;
+            line-height: 60px;
+            position: relative;
+            vertical-align: middle;
+            cursor: pointer;
+            margin: 0;
+        }
+
+            header .mobile-header .mobile-nav-bar a.menu-icon .fa {
+                margin: 0 0 0 15px;
+            }
+
+
+
+    header .section {
+        padding: 0;
+    }
+
+        header .section .mobile-brand-logo {
+            padding: 10px 10px 15px 16px;
+        }
+
+@media screen and (min-width: 601px) {
     header {
         background: url(../img/top-shadow.png) no-repeat center top;
         background-size: cover;
