--- a/css/base/index.css
+++ b/css/base/index.css
@@ -14,6 +14,13 @@
 }*/
 body {
     font-family: 'Lato', sans-serif;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+main {
+    flex: 1 0 auto;
 }
 
 /*********/
