--- a/css/base/base.css
+++ b/css/base/base.css
@@ -14,4 +14,11 @@
 }*/
 body {
     font-family: 'Lato', sans-serif;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+main {
+    flex: 1 0 auto;
 }
