--- a/css/layout/footer.css
+++ b/css/layout/footer.css
@@ -1,3 +1,47 @@
 ﻿/********************/
 /*   Footer Styles  */
 /********************/
+footer.page-footer {
+    width: 100%;
+    bottom: 0;
+    background-color: #3a3a3c;
+    margin: 0;
+    padding: 0;
+    opacity: 1;
+    text-size-adjust: 100%;
+    z-index: 99;
+}
+
+.page-footer .container {
+    height: auto;
+    padding-top: 14px;
+    width: 100%;
+    bottom: 0;
+}
+
+.page-footer .container .row {
+    margin: 0;
+    padding 0;
+    /*max-width: 1280px;*/
+}
+
+.page-footer .container .row .footer-copyright {
+    padding: 20px 0 33px 0;
+    line-height: 24px;
+    height: auto;
+    position: relative;
+}
+
+.page-footer .container .row .footer-copyright p, .page-footer .container .row .footer-copyright p a {
+    color: #fff;
+}
+
+.page-footer .container .row .footer-copyright p {
+    font-size: 14px;
+    font-weight: 300;
+    margin: 0;
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+    line-height: 1.6;
+    text-rendering: optimizeLegibility;
+}
