--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,13 @@
 }*/
 body {
     font-family: 'Lato', sans-serif;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+main {
+    flex: 1 0 auto;
 }
 
 /*********/
@@ -312,13 +319,6 @@ body {
 /*    nav styles      */
 /**********************/
 nav {
-    background-color: transparent;
-
-    padding-top: 17px;
-
-}
-
-nav, nav ul {
     background: none;
     font-size: 16px;
     height: auto;
@@ -326,21 +326,56 @@ nav, nav ul {
     padding: 0;
 }
 
-nav ul li {
-    font-family: Josefin;
-    display: inline-block;
-    background: none;
-    position: relative;
-}
+    nav .brand-logo.col.l4.m5 {
+        width: 27%;
+        height: auto;
+        padding: 10px 15px 15px 16px;
+    }
 
-nav .brand-logo {
-    width: 25%;
-    height: auto;
-}
-
-    nav .brand-logo img {
+    nav .brand-logo a img {
         max-width: 100%;
     }
+
+    nav .nav-column.col.l8.m7 {
+        background: none;
+        width: 100%;
+        height: auto;
+        padding: 17px 0.5em 0 .9375rem;
+        font-family: 'Lato', sans-serif;
+        font-size: 16px;
+        line-height: 1.5;
+    }
+
+        nav .nav-column ul {
+            background: none;
+            font-size: 16px;
+            height: auto;
+            line-height: normal;
+            padding: 0;
+        }
+
+            nav .nav-column ul li {
+                list-style-position: outside;
+                font-family: Josefin;
+                display: inline-block;
+                background: none;
+                position: relative;
+                padding: 0;
+                float: left;
+            }
+
+                nav .nav-column ul li a {
+                    background: transparent;
+                    padding: 10px 3px 9px 4px;
+                    font-size: 10px;
+                    text-transform: uppercase;
+                    color: #ffffff;
+                    display: inline-block;
+                    text-decoration: none;
+                    cursor: pointer;
+                }
+
+
 
 .side-nav {
     background: #005248;
@@ -355,13 +390,13 @@ nav .brand-logo {
         font-size: 16px;
     }
 
-
 /********************************/
 /*       Header Styles          */
 /********************************/
 header {
     background-color: #ffffff;
     background-size: auto;
+    padding-bottom: 27px;
 }
 
     header .mobile-header {
@@ -430,6 +465,7 @@ header {
     header {
         background: url(../img/top-shadow.png) no-repeat center top;
         background-size: cover;
+        padding: 17px 0;
     }
 }
 
@@ -440,6 +476,50 @@ header {
 /********************/
 /*   Footer Styles  */
 /********************/
+footer.page-footer {
+    width: 100%;
+    bottom: 0;
+    background-color: #3a3a3c;
+    margin: 0;
+    padding: 0;
+    opacity: 1;
+    text-size-adjust: 100%;
+    z-index: 99;
+}
+
+.page-footer .container {
+    height: auto;
+    padding-top: 14px;
+    width: 100%;
+    bottom: 0;
+}
+
+.page-footer .container .row {
+    margin: 0;
+    padding 0;
+    /*max-width: 1280px;*/
+}
+
+.page-footer .container .row .footer-copyright {
+    padding: 20px 0 33px 0;
+    line-height: 24px;
+    height: auto;
+    position: relative;
+}
+
+.page-footer .container .row .footer-copyright p, .page-footer .container .row .footer-copyright p a {
+    color: #fff;
+}
+
+.page-footer .container .row .footer-copyright p {
+    font-size: 14px;
+    font-weight: 300;
+    margin: 0;
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+    line-height: 1.6;
+    text-rendering: optimizeLegibility;
+}
 /*******************/
 /*   CSS Scripts   */
 /*******************/
