--- a/css/base/index.css
+++ b/css/base/index.css
@@ -28,21 +28,21 @@ main {
 /*********/
 @font-face {
     font-family: 'Josefin';
-    src: url('../fonts/Josefin/josefinsans-light.ttf') format('truetype');
+    src: url('../../fonts/Josefin/josefinsans-light.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Josefin';
-    src: url('../fonts/Josefin/josefinsans-semibold.ttf') format('truetype');
+    src: url('../../fonts/Josefin/josefinsans-semibold.ttf') format('truetype');
     font-weight: 600;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Josefin';
-    src: url('../fonts/Josefin/josefinsans-regular.ttf') format('truetype');
+    src: url('../../fonts/Josefin/josefinsans-regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
 }
