--- a/css/layout/index.css
+++ b/css/layout/index.css
@@ -176,7 +176,6 @@ footer.page-footer {
     background-color: #3a3a3c;
     margin: 0;
     padding: 0;
-    opacity: 1;
     text-size-adjust: 100%;
     z-index: 99;
 }
@@ -188,29 +187,56 @@ footer.page-footer {
     bottom: 0;
 }
 
-.page-footer .container .row {
-    margin: 0;
-    padding 0;
-    /*max-width: 1280px;*/
-}
+    .page-footer .container .row {
+        margin: 0;
+        padding 0;
+        max-width: 1280px;
+    }
 
-.page-footer .container .row .footer-copyright {
-    padding: 20px 0 33px 0;
-    line-height: 24px;
-    height: auto;
-    position: relative;
-}
+        .page-footer .container .row .footer-copyright {
+            padding: 20px 0 33px 0;
+            line-height: 24px;
+            height: auto;
+            position: relative;
+        }
 
-.page-footer .container .row .footer-copyright p, .page-footer .container .row .footer-copyright p a {
-    color: #fff;
-}
+            .page-footer .container .row .footer-copyright p, .page-footer .container .row .footer-copyright p a {
+                color: #fff;
+            }
 
-.page-footer .container .row .footer-copyright p {
-    font-size: 14px;
-    font-weight: 300;
-    margin: 0;
-    text-align: center;
-    font-family: 'Lato', sans-serif;
-    line-height: 1.6;
-    text-rendering: optimizeLegibility;
+            .page-footer .container .row .footer-copyright p {
+                font-size: 14px;
+                font-weight: 300;
+                margin: 0;
+                text-align: center;
+                font-family: 'Lato', sans-serif;
+                line-height: 1.6;
+                text-rendering: optimizeLegibility;
+            }
+
+@media screen and (min-width: 601px) {
+    footer.page-footer {
+        background: url(../../img/top-shadow.png) no-repeat center top;
+        background-size: cover;
+    }
+
+    .page-footer .container .row .col {
+        margin: 0;
+        padding: 0 15px;
+    }
+
+    .page-footer .container .row .footer-copyright {
+        background-color: transparent;
+        margin: 0;
+        padding-top: 53px;
+        padding-bottom: 14px;
+    }
+
+        .page-footer .container .row .footer-copyright p, .page-footer .container .row .footer-copyright p a {
+            color: #cfcfcf;
+        }
+
+        .page-footer .container .row .footer-copyright p {
+            padding: 0;
+        }
 }
