--- a/Site.Master
+++ b/Site.Master
@@ -136,7 +136,7 @@
         <main>
             <asp:ContentPlaceHolder runat="server" ID="MainContent" />
         </main>
-        <footer class="page-footer">
+        <footer class="page-footer clearfix">
             <div class="container">
                 <div class="row">
                     <div class="col l12 m12 s12">
@@ -149,13 +149,13 @@
         </footer>
     </form>
     <!--  Scripts-->
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="js/jquery.timeago.min.js"></script>
-    <script src="js/prism.js"></script>
-    <script src="js/jade/lunr.min.js"></script>
-    <script src="js/jade/search.js"></script>
-    <script src="js/materialize.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
+    <script src="js/jquery.timeago.min.js" type="text/javascript"></script>
+    <script src="js/prism.js" type="text/javascript"></script>
+    <script src="js/jade/lunr.min.js" type="text/javascript"></script>
+<%--    <script src="js/jade/search.js" type="text/javascript"></script>--%>
+    <script src="js/materialize.js" type="text/javascript"></script>
     <script src="https://use.fontawesome.com/6ae98ae3b7.js"></script>
-    <script src="/js/site.js"></script>
+    <script src="/js/site.js" type="text/javascript"></script>
 </body>
 </html>
