--- a/css/base/base.css
+++ b/css/base/base.css
@@ -12,13 +12,13 @@
 .icon-block .material-icons {
 	font-size: inherit;
 }*/
-body {
+body, body form {
     font-family: 'Lato', sans-serif;
     display: flex;
     min-height: 100vh;
     flex-direction: column;
 }
 
-main {
+body form main {
     flex: 1 0 auto;
 }
