--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -5,6 +5,7 @@ header {
     background-color: #ffffff;
     background-size: auto;
     padding-bottom: 27px;
+    z-index: 999;
 }
 
     header .mobile-header {
