--- a/css/layout/index.css
+++ b/css/layout/index.css
@@ -91,6 +91,7 @@ header {
     background-color: #ffffff;
     background-size: auto;
     padding-bottom: 27px;
+    z-index: 999;
 }
 
     header .mobile-header {
