--- a/css/utils/variables.css
+++ b/css/utils/variables.css
@@ -1,4 +1,4 @@
-﻿/********************//* variables styles */ /********************/.brand-color {
+﻿/********************//* variables styles */ /********************//* branding */.brand-color {
     background-color: #9bcbc2;
 }
 
@@ -12,5 +12,138 @@
 
 .brand-text-color {
     background-color: #005248;
+}
+
+/* slides colors  */
+.slide-blue {
+    background: rgba(63, 134, 200, 0.73);
+}
+
+.slide-green {
+    background: rgba(91, 122, 21, 0.68);
+}
+
+.slide-red {
+    background: rgba(192, 22, 27, 0.72);
+}
+
+.slide-purple {
+    background: rgba(109, 62, 124, 0.79);
+}
+
+.slide-light-purple {
+    background: linear-gradient(rgba(76, 43, 64, 0.98),rgba(79, 77, 78, 0.2));
+    background: -moz-linear-gradient(rgba(76, 43, 64, 0.98),rgba(79, 77, 78, 0.2));
+    background: -o-linear-gradient(rgba(76, 43, 64, 0.98),rgba(79, 77, 78, 0.2));
+    background: -webkit-linear-gradient(rgba(76, 43, 64, 0.98),rgba(79, 77, 78, 0.2));
+}
+
+.slide-dark-green {
+    background: linear-gradient(rgba(19, 71, 19, 0.95),rgba(0, 0, 0, 0.46));
+    background: -moz-linear-gradient(rgba(19, 71, 19, 0.95),rgba(0, 0, 0, 0.46));
+    background: -o-linear-gradient(rgba(19, 71, 19, 0.95),rgba(0, 0, 0, 0.46));
+    background: -webkit-linear-gradient(rgba(19, 71, 19, 0.95),rgba(0, 0, 0, 0.46));
+}
+
+.slide-bottle-green {
+    background: rgba(51, 155, 142, 0.76);
+}
+
+/* Slide colors */
+.slide-blue .caption-area:before {
+    border-color: rgba(63, 134, 200, 0.73) rgba(63, 134, 200, 0.73) rgba(63, 134, 200, 0.73) transparent;
+    background: rgba(63, 134, 200, 0.73);
+}
+
+.slide-green .caption-area:before {
+    border-color: rgba(91, 122, 21, 0.68) rgba(91, 122, 21, 0.68) rgba(91, 122, 21, 0.68) transparent;
+    background: rgba(91, 122, 21, 0.68);
+}
+
+.slide-red .caption-area:before {
+    border-color: rgba(192, 22, 27, 0.72) rgba(192, 22, 27, 0.72) rgba(192, 22, 27, 0.72) transparent;
+    background: rgba(192, 22, 27, 0.72);
+}
+
+.slide-purple .caption-area:before {
+    border-color: rgba(109, 62, 124, 0.79) rgba(109, 62, 124, 0.79) rgba(109, 62, 124, 0.79) transparent;
+    background: rgba(109, 62, 124, 0.79);
+}
+
+.slide-light-purple .caption-area:before {
+    border-color: rgba(144, 82, 121, 0.56) rgba(144, 82, 121, 0.56) rgba(144, 82, 121, 0.56) transparent;
+    background: linear-gradient(rgba(76, 43, 64, 0.98),rgba(79, 77, 78, 0.2));
+    background: -moz-linear-gradient(rgba(76, 43, 64, 0.98),rgba(79, 77, 78, 0.2));
+    background: -o-linear-gradient(rgba(76, 43, 64, 0.98),rgba(79, 77, 78, 0.2));
+    background: -webkit-linear-gradient(rgba(76, 43, 64, 0.98),rgba(79, 77, 78, 0.2));
+}
+
+.slide-dark-green .caption-area:before {
+    border-color: rgba(32, 84, 32, 0.74) rgba(32, 84, 32, 0.74) rgba(32, 84, 32, 0.74) transparent;
+    background: linear-gradient(rgba(19, 71, 19, 0.95),rgba(0, 0, 0, 0.46));
+    background: -moz-linear-gradient(rgba(19, 71, 19, 0.95),rgba(0, 0, 0, 0.46));
+    background: -o-linear-gradient(rgba(19, 71, 19, 0.95),rgba(0, 0, 0, 0.46));
+    background: -webkit-linear-gradient(rgba(19, 71, 19, 0.95),rgba(0, 0, 0, 0.46));
+}
+
+.slide-bottle-green .caption-area:before {
+    border-color: rgba(51, 155, 142, 0.76) rgba(51, 155, 142, 0.76) rgba(51, 155, 142, 0.76) transparent;
+    background: rgba(51, 155, 142, 0.76);
+}
+/* Slide text colors */
+.slide-blue .caption-area .text-headline small {
+    color: #9cceff;
+}
+
+.slide-green .caption-area .text-headline small {
+    color: #c1e870;
+}
+
+.slide-red .caption-area .text-headline small {
+    color: #750003;
+}
+
+.slide-purple .caption-area .text-headline small {
+    color: #470e58;
+}
+
+.slide-light-purple .caption-area .text-headline small {
+    color: #6e2956;
+}
+
+.slide-dark-green .caption-area .text-headline small {
+    color: #0d3908;
+}
+
+.slide-bottle-green .caption-area .text-headline small {
+    color: #00544a;
+}
+/* Slide Button colors */
+.slide-blue .button {
+    background-color: #9cceff;
+}
+
+.slide-green .button {
+    background-color: #3f5d00;
+}
+
+.slide-red .button {
+    background-color: #750003;
+}
+
+.slide-purple .button {
+    background-color: #470e58;
+}
+
+.slide-light-purple .button {
+    background-color: #6e2956;
+}
+
+.slide-dark-green .button {
+    background-color: #0d3908;
+}
+
+.slide-bottle-green .button {
+    background-color: #00544a;
 }
 
